# fvtt-autopublish

./: Dockerfile  LICENSE  README.md  action.yaml  auto-publish-v2.py  fvtt-auto-publish.py  pyproject.toml
src/fvtt_autopublish/: __init__.py  __main__.py
tests/: test_fvtt_autopublish.py
