[tool.poetry]
name = "fvtt-autopublish"
version = "0.1.0"
description = ""
authors = ["Clay Sweetser <clay.sweetser@gmail.com>"]

[tool.poetry.scripts]
fvtt-autopublish = 'fvtt_autopublish:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
mechanize = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
